# planar-slicing-extension

./: .gitignore  CuraEnginePlugin.sln  README.md
.stbuild/: buildspace.json
.stbuild/.nuke/: build.schema.json
CuraConnectionInterface/main/: CuraConnectionInterface.idl
CuraConnectionInterface/main/.stbuild/: CuraConnectionInterfaceProject.json
CuraEngineConnection/: CMakeLists.txt  ExpFuncs.cpp
CuraEngineConnection/conan_build/: Build_Debug.bat  Build_Release.bat  Debug.bat  Release.bat
CuraEngineConnection/include/: Application.h  CuraEngineControl.h  Exports.h
CuraEngineConnection/include/communication/: ArcusCommunication.h  ArcusCommunicationPrivate.h  Listener.h
CuraEngineConnection/include/utils/: CEMesh.h  CuraConnectionInterface.h
CuraEngineConnection/src/: Application.cpp  Exports.cpp
CuraEngineConnection/src/communication/: ArcusCommunication.cpp  ArcusCommunicationPrivate.cpp  Listener.cpp
CuraEngineConnectionTest/main/: CuraEngineConnectionTest.csproj
CuraEngineConnectionTest/main/.stbuild/: CuraEngineConnectionTestProject.json
CuraEngineConnectionTest/main/src/: Application.cs  Program.cs
CuraEngineNetWrapper/: CuraEngineNetWrapper.csproj  NativeLibLoader.cs  NetWrapper.cs
CuraEngineNetWrapper/.stbuild/: CuraEngineNetWrapperProject.json
CuraEngineOperation/: CEOperation.cs  CuraEngineOperation.csproj  CustomProp.cs  ExtensionFactory.cs  GCodeHandler.cs
CuraEngineOperation/.stbuild/: CuraEngineOperationProject.json
CuraEngineParametersLibrary/: CEParameter.cs  CEParameters.cs  CuraEngineParametersLibrary.csproj  CuraJSONParser.cs  InstanceContainer.cs  MachineInfo.cs  Material.cs  ParametersParser.cs  ValueFormatter.cs
CuraEngineParametersLibrary/.stbuild/: CuraEngineParametersLibraryProject.json
